--- a/css/style.css
+++ b/css/style.css
@@ -93,28 +93,26 @@ header>* {
 /* footer */
 
 footer {
-    height: 500px;
+
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     background-color: rgb(15, 15, 15);
-    padding: 40px 0;
-    display: flex;
-    justify-content: center;
+    border: 2px dashed white;
+    align-items: center;
 }
 
-.footer-container {
-    flex-basis: 70%;
-}
-
-
+/* upper footer  */
 .upper-footer {
-
-    background-color: grey;
     display: flex;
-    height: 100%;
+    height: 400px;
+    width: 70%;
+    padding: 10px 0 30px;
 }
 
 .social {
     flex-grow: 1;
-    background-color: red;
+    background-color: orange;
 }
 
 .btm-menu {
@@ -125,12 +123,18 @@ footer {
 
 .column-menu {
     border: 2px white dashed;
-    flex-basis: 25%;
+    flex-basis: 100%;
+
 }
 
+/* lower footer */
+
 .lower-footer {
+    height: 70px;
+    width: 70%;
+    background-color: yellow;
     display: flex;
+    padding: 10px;
     justify-content: space-between;
-    background-color: rgb(226, 226, 84);
-    padding: 15px 5px;
+    align-items: center;
 }
