--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ footer {
     width: 70%;
     background-color: yellow;
     display: flex;
-    padding: 10px;
+    padding: 10px 0;
     justify-content: space-between;
     align-items: center;
 }
